--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "autoprefixer": "^6.3.4",
     "jaded-brunch": "^2.2.3",
     "jquery": "^2.2.2",
+    "jquery-inputmask": "^1.0.1",
     "postcss-brunch": "^0.5.0",
     "postcss-flexbugs-fixes": "^2.0.0",
     "postcss-flexibility": "^1.0.3",
     "postcss-inline-svg": "^1.4.0",
     "postcss-svgo": "^2.1.2",
     "sass-brunch": "^2.0.0",
-    "siema": "^1.2.0"
+    "siema": "^1.2.0",
+    "sweetalert2": "^6.4.4",
+    "vanilla-masker": "^1.1.1"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
